# orbit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Taskfile.yml  go.mod  go.sum  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
_examples/logdemo/: main.go
cmd/genschema/: main.go
cmd/orbit/: main.go
cmd/version/: main.go
docs/: DATA_MODEL.md  DESIGN.md  DEVELOPMENT.md  MIGRATIONS.md  TECH_STACK.md
internal/app/: db.go  db_test.go  dock.go  link.go  link_test.go  pad.go  pad_test.go  reserved.go  reserved_test.go  status.go  status_test.go  tags_test.go  work.go  work_test.go
internal/cli/: config.go  database.go  database_test.go  init.go  lifecycle.go  lifecycle_test.go  link.go  link_test.go  prompt.go  prompt_test.go  root.go  root_test.go  status.go  status_test.go  strict.go  strict_test.go  tags.go  work.go  work_test.go
internal/config/: config.go  config_test.go  default_config.yaml
internal/core/: artifact.go  artifact_test.go  note.go  tag.go  tag_test.go  work_entry.go  work_entry_test.go
internal/db/: artifacts.go  artifacts_test.go  db.go  db_test.go  dock.go  dock_test.go  migrate.go  migrate_test.go  notes.go  schema.sql  state.go  state_test.go  tags.go  tags_test.go  work_entries.go  work_entries_test.go
internal/db/migrations/: 0000_v0.1.0.sql  0001_add_artifacts.sql
internal/db/testdata/: schema.golden.sql  v0_1_0.db
internal/diag/: diag.go
internal/version/: version.go
scripts/: create_v0_1_0_app_data.sh  setup_devcontainer.sh  static_analyzer.py  validate_0000_schema.sh  validate_schema.sh
src/orbit/: __init__.py  __main__.py  common.py  exceptions.py  logging.py
src/orbit/cli/: __init__.py  common.py  log.py  main.py  registry.py  work.py
src/orbit/cli/work/: __init__.py
src/orbit/core/: config.py  db.py  lifecycle.py  schema.sql
tests/units/: common.py  conftest.py
tests/units/core/: conftest.py  test_db.py
